--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=login" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=vpn_key" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=mail" />
     <link rel="stylesheet" href="estilos/style.css">
@@ -22,7 +21,7 @@
                 fazer as configurações para seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <span class="material-symbols-outlined">login</span>
+                        <span class="material-symbols-outlined">mail</span>
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail"
                         autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
@@ -34,7 +33,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha<span class="material-symbols-outlined">
+                    <a href="esqueci.html"> Esqueci a senha <span class="material-symbols-outlined">
                     mail</span></a>
                 </form>
             </div>
